--- a/get_json/index.html
+++ b/get_json/index.html
@@ -48,7 +48,7 @@
 	
 	// alert('working now');
 	var courses = Array();
-	$.post('get_json/Timetable2016.xml',null,null,'xml').then(function(res){
+	$.post('get_json/Book12.xml',null,null,'xml').then(function(res){
 			// console.log($(row));
 			$(res).find('Row').each(function(i,row){
 				
